--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <meta name="author" content="Inovatik">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
-	<meta property="og:site_name" content="" /> <!-- website name -->
-	<meta property="og:site" content="" /> <!-- website link -->
-	<meta property="og:title" content=""/> <!-- title shown in the actual shared post -->
-	<meta property="og:description" content="" /> <!-- description shown in the actual shared post -->
-	<meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
-	<meta property="og:url" content="" /> <!-- where do you want your post to link to -->
+	<meta property="og:site_name" content="JG Engineering metal workshop" /> <!-- website name -->
+	<meta property="og:site" content="www.jgengineering.me" /> <!-- website link -->
+	<meta property="og:title" content="JG Engineering Metal Workshop"/> <!-- title shown in the actual shared post -->
+	<meta property="og:description" content="JG is an engineering metal workshop working in kampala operating on a small scale but offers mechanical services on all kind of metals " /> <!-- description shown in the actual shared post -->
+	<meta property="og:image" content="images/tp.jpg" /> <!-- image link, make sure it's jpg -->
+	<meta property="og:url" content="www.jgengineering.me" /> <!-- where do you want your post to link to -->
 	<meta property="og:type" content="article" />
 
     <!-- Website Title -->
@@ -31,6 +31,7 @@
 	
 	<!-- Favicon  -->
     <link rel="icon" href="images/jg.png">
+	<script data-ad-client="ca-pub-8859133033467883" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
     
