--- a/index.html
+++ b/index.html
@@ -94,17 +94,17 @@
             </ul>
             <span class="nav-item social-icons">
                 <span class="fa-stack">
-                    <a href="#your-link">
+                    <a href="https://www.facebook.com/allandavaro">
                         <span class="hexagon"></span>
                         <i class="fab fa-facebook-f fa-stack-1x"></i>
                     </a>
                 </span>
-                <span class="fa-stack">
-                    <a href="#your-link">
-                        <span class="hexagon"></span>
-                        <i class="fab fa-twitter fa-stack-1x"></i>
-                    </a>
-                </span>
+                 <span class="fa-stack">
+                            <a href="https://www.instagram.com/wafula_allan_isaac/">
+                                <span class="hexagon"></span>
+                                <i class="fab fa-instagram fa-stack-1x"></i>
+                            </a>
+                        </span>
             </span>
         </div>
     </nav> <!-- end of navbar -->
@@ -997,15 +997,15 @@
                         <p>You can stop by our office for a cup of coffee and just use the contact form below for any questions and inquiries</p>
                         <ul class="list-unstyled li-space-lg">
                             <li class="address"><i class="fas fa-map-marker-alt"></i>Rubiri Ring Road,Ndebba,Kampala,Uganda</li>
-                            <li><i class="fas fa-phone"></i><a href="tel:003024630820">0752634647</a></li>
-                            <li><i class="fas fa-phone"></i><a href="tel:003024630820">0776634647</a></li>
-                            <li><i class="fas fa-phone"></i><a href="tel:003024630820">0708832767</a></li>
+                            <li><i class="fas fa-phone"></i><a href="tel:0752634647">0752634647</a></li>
+                            <li><i class="fas fa-phone"></i><a href="tel:0776634647">0776634647</a></li>
+                            <li><i class="fas fa-phone"></i><a href="tel:0708832767">0708832767</a></li>
                             <li><i class="fas fa-envelope"></i><a href="mailto:wafulaallan5@gmail.com">wafulaallan5@gmail.com</a></li>
                         </ul>
                         <h3>Follow JG On Social Media</h3>
 
                         <span class="fa-stack">
-                            <a href="#your-link">
+                            <a href="https://www.facebook.com/allandavaro">
                                 <span class="hexagon"></span>
                                 <i class="fab fa-facebook-f fa-stack-1x"></i>
                             </a>
@@ -1022,14 +1022,9 @@
                                 <i class="fab fa-pinterest fa-stack-1x"></i>
                             </a>
                         </span>
+                       
                         <span class="fa-stack">
-                            <a href="#your-link">
-                                <span class="hexagon"></span>
-                                <i class="fab fa-instagram fa-stack-1x"></i>
-                            </a>
-                        </span>
-                        <span class="fa-stack">
-                            <a href="#your-link">
+                            <a href="https://www.facebook.com/allandavaro">
                                 <span class="hexagon"></span>
                                 <i class="fab fa-linkedin-in fa-stack-1x"></i>
                             </a>
