--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,7 @@
                         <h3>Follow JG On Social Media</h3>
 
                         <span class="fa-stack">
-                            <a href="https://www.facebook.com/allandavaro">
+                            <a href="https://www.facebook.com/JGenginering">
                                 <span class="hexagon"></span>
                                 <i class="fab fa-facebook-f fa-stack-1x"></i>
                             </a>
@@ -1024,7 +1024,7 @@
                         </span>
                        
                         <span class="fa-stack">
-                            <a href="https://www.facebook.com/allandavaro">
+                            <a href="https://www.linkedin.com/in/wafula-allan-8a5490204/">
                                 <span class="hexagon"></span>
                                 <i class="fab fa-linkedin-in fa-stack-1x"></i>
                             </a>
