--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </ul>
             <span class="nav-item social-icons">
                 <span class="fa-stack">
-                    <a href="https://www.facebook.com/allandavaro">
+                    <a href="https://www.facebook.com/JGenginering">
                         <span class="hexagon"></span>
                         <i class="fab fa-facebook-f fa-stack-1x"></i>
                     </a>
