--- a/index.html
+++ b/index.html
@@ -1040,7 +1040,7 @@
                 <div class="col-lg-6">
                     
                     <!-- Contact Form -->
-                    <form id="contactForm" data-toggle="validator" data-focus="false"   action="https://formspree.io/f/xgepqrog" method="POST">
+                    <form id="contactForm" data-toggle="validator" data-focus="false"   action="https://formspree.io/f/wafulaallan5@gmail.com" method="POST">
                         <div class="form-group">
                             <input type="text" class="form-control-input" id="cname" required>
                             <label class="label-control" for="cname">Name</label>
