--- a/index.html
+++ b/index.html
@@ -1063,6 +1063,7 @@
                         <div class="form-group">
                             <button type="submit" class="form-control-submit-button">SUBMIT MESSAGE</button>
                         </div>
+			    <div id="status"></div>
                         <div class="form-message">
                             <div id="cmsgSubmit" class="h3 text-center hidden"></div>
                         </div>
