--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<meta property="og:type" content="article" />
 
     <!-- Website Title -->
-    <title>JG ENGINEERING METAL WORKSHOP </title>
+    <title>JG GENERAL ENGINEERING METAL WORKSHOP </title>
     
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext" rel="stylesheet">
