--- a/index.html
+++ b/index.html
@@ -520,24 +520,24 @@
                 <div class="col-lg-6">
                    
                     <!-- Call Me Form -->
-                    <form id="callMeForm" data-toggle="validator" data-focus="false" method="post" action="callmeform-process.php">
+                    <form id="callMeForm" data-toggle="validator" data-focus="false" method="post"  action="https://formspree.io/f/mvovyyva">
                         <div class="form-group">
-                            <input type="text" class="form-control-input" id="lname" name="lname" required>
+                            <input type="text" class="form-control-input" id="lname" name="name" required>
                             <label class="label-control" for="lname">Name</label>
                             <div class="help-block with-errors"></div>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control-input" id="lphone" name="lphone" required>
+                            <input type="text" class="form-control-input" id="lphone" name="phone_number" required>
                             <label class="label-control" for="lphone">Phone</label>
                             <div class="help-block with-errors"></div>
                         </div>
                         <div class="form-group">
-                            <input type="email" class="form-control-input" id="lemail" name="lemail" required>
+                            <input type="email" class="form-control-input" id="lemail" name="email" required>
                             <label class="label-control" for="lemail">Email</label>
                             <div class="help-block with-errors"></div>
                         </div>
                         <div class="form-group">
-                            <select class="form-control-select" id="lselect" required>
+                            <select class="form-control-select" id="lselect" name="services"  required>
                                 <option class="select-option" value="" disabled selected>Interested in...</option>
                                 <option class="select-option" value="welding services"> Any Welding services</option>
                                 <option class="select-option" value="lathe work services">Any lathe work services</option>
@@ -558,6 +558,7 @@
                         <div class="form-message">
                             <div id="lmsgSubmit" class="h3 text-center hidden"></div>
                         </div>
+			    <div id="status"></div>
                     </form>
                     <!-- end of call me form -->
                     
