--- a/index.html
+++ b/index.html
@@ -1127,5 +1127,6 @@
     <script src="js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
     <script src="js/scripts.js"></script> <!-- Custom scripts -->
     <script src="js/contact.js"></script>
+    <script src="js/callme.js"></script>
 </body>
 </html>
