--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<link href="css/styles.css" rel="stylesheet">
 	
 	<!-- Favicon  -->
-    <link rel="icon" href="images/jg.png">
+    <link rel="shortcut icon" type="image/x-icon"  href="images/tp.png">
 	<script data-ad-client="ca-pub-8859133033467883" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
