--- a/index.html
+++ b/index.html
@@ -32,9 +32,14 @@
 	<!-- Favicon  -->
    <link rel="shortcut icon" type="image/x-icon" href="images/tp.jpg">
 	<script data-ad-client="ca-pub-8859133033467883" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
-    
+    <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-8859133033467883">
+</amp-auto-ads>
     <!-- Preloader -->
 	<div class="spinner-wrapper">
         <div class="spinner">
