--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
         data-ad-client="ca-pub-8859133033467883">
 </amp-auto-ads>
     <!-- Preloader -->
-	<div class="spinner-wrapper">
+<!-- 	<div class="spinner-wrapper">
         <div class="spinner">
             <div class="bounce1"></div>
             <div class="bounce2"></div>
             <div class="bounce3"></div>
         </div>
     </div>
-    <!-- end of preloader -->
+    <!-- end of preloader --> -->
     
 
     <!-- Navbar -->
