--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+    <meta name="propeller" content="11245a22c9f719ff2dd73cdb7da238a4">
     <!-- SEO Meta Tags -->
     <meta name="description" content="JG is an engineering metal workshop working in kampala operating on a small scale but offering a variety of metal services.">
     <meta name="author" content="Wafula Allan Isaac">
