--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                             <p class="price">Starting from <span>shs40,000</span></p>
                         </div>
                         <div class="button-container">
-                            <a class="btn-solid-reg page-scroll" href="#callMe">DETAILS</a>
+                            <a class="btn-solid-reg page-scroll" href="https://flutterwave.com/pay/wafulaallanisaaclwby">DETAILS</a>
                         </div> <!-- end of button-container -->
                     </div>
                     <!-- end of card -->
@@ -252,7 +252,7 @@
                             <p class="price">Starting from <span>shs25,000</span></p>
                         </div>
                         <div class="button-container">
-                            <a class="btn-solid-reg page-scroll" href="#callMe">DETAILS</a>
+                            <a class="btn-solid-reg page-scroll" href="https://flutterwave.com/pay/wafulaallanisaaclwby">DETAILS</a>
                         </div> <!-- end of button-container -->
                     </div>
                     <!-- end of card -->
@@ -285,7 +285,7 @@
                             <p class="price">Starting at <span>shs60,000</span></p>
                         </div>
                         <div class="button-container">
-                            <a class="btn-solid-reg page-scroll" href="#callMe">DETAILS</a>
+                            <a class="btn-solid-reg page-scroll" href="https://flutterwave.com/pay/wafulaallanisaaclwby">DETAILS</a>
                         </div> <!-- end of button-container -->
                     </div>
                     <div class="card">
@@ -299,7 +299,7 @@
                             <p class="price">Starting at <span>shs450,000</span></p>
                         </div>
                         <div class="button-container">
-                            <a class="btn-solid-reg page-scroll" href="#callMe">DETAILS</a>
+                            <a class="btn-solid-reg page-scroll" href="https://flutterwave.com/pay/wafulaallanisaaclwby">DETAILS</a>
                         </div> <!-- end of button-container -->
                     </div>
                     <div class="card">
@@ -313,7 +313,7 @@
                             <p class="price">Starting at <span>shs300,000</span></p>
                         </div>
                         <div class="button-container">
-                            <a class="btn-solid-reg page-scroll" href="#callMe">DETAILS</a>
+                            <a class="btn-solid-reg page-scroll" href="https://flutterwave.com/pay/wafulaallanisaaclwby">DETAILS</a>
                         </div> <!-- end of button-container -->
                     </div>
 
