--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">JOHGRA</a> -->
 
         <!-- Image Logo -->
-        <a class="navbar-brand logo-image" href="index.html"><img src="images/tp.jpg" alt="alternative">JG</a>
+        <a class="navbar-brand logo-image" href="index.html"><img src="images/jogo.svg" alt="alternative">JG</a>
         
         <!-- Mobile Menu Toggle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" JG-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
