--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <div class="bounce2"></div>
             <div class="bounce3"></div>
         </div>
-    </div>
-    <!-- end of preloader --> -->
+    </div>-->
+    <!-- end of preloader --> 
     
 
     <!-- Navbar -->
