--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<link href="css/styles.css" rel="stylesheet">
 	
 	<!-- Favicon  -->
-   <link rel="shortcut icon" type="image/x-icon" href="images/tp.jpg">
+   <link rel="shortcut icon" type="image/x-icon" href="images/jg logo2.jpg">
 	<script data-ad-client="ca-pub-8859133033467883" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<script async custom-element="amp-auto-ads"
         src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
