--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<link href="css/styles.css" rel="stylesheet">
 	
 	<!-- Favicon  -->
-   <link rel="shortcut icon" type="image/x-icon" href="images/jg logo2.jpg">
+   <link rel="shortcut icon" type="image/x-icon" href="images/jj.svg">
 	<script data-ad-client="ca-pub-8859133033467883" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<script async custom-element="amp-auto-ads"
         src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
@@ -57,7 +57,7 @@
         <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">JOHGRA</a> -->
 
         <!-- Image Logo -->
-        <a class="navbar-brand logo-image" href="index.html"><img src="images/jg logo2.jpg" alt="alternative">JG</a>
+        <a class="navbar-brand logo-image" href="index.html"><img src="images/jj.svg" alt="alternative">JG</a>
         
         <!-- Mobile Menu Toggle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" JG-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
